# picomeson

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: builder.rs  cli.rs  main.rs  os.rs  runtime.rs  steps.rs
src/: builder.rs  builtin-options.txt  interpreter.rs  lib.rs  machine_file.rs  main.rs  os.rs  parser.rs  path.rs  runtime.rs  steps.rs
src/interpreter/: error.rs  path.rs
src/interpreter/builtins/: add_languages.rs  array.rs  build_target.rs  compiler.rs  config_data.rs  debug.rs  dict.rs  env.rs  external_program.rs  files.rs  filesystem.rs  import.rs  include_directories.rs  install_headers.rs  join_paths.rs  machine.rs  meson.rs  mod.rs  option.rs  project.rs  run_result.rs  string.rs  subdir.rs  test.rs  utils.rs  variable.rs  version.rs
src/interpreter/builtins/compiler/: compiler_id.c  underscore_prefix.c  underscore_prefix2.c
src/machine_file/: parser.rs
src/parser/: error.rs
