[workspace]
resolver = "3"
members = [
    "cli",
]

[workspace.dependencies]
picomeson = { path = "." }
anyhow = { version = "1.0.99", default-features = false }

[package]
name = "picomeson"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jprendes/picomeson"
repository = "https://github.com/jprendes/picomeson"
readme = "README.md"
description = "A small parser for meson.build files"


[dependencies]
as-any = "0.3.2"
semver = { version = "1.0.26", default-features = false }
hashbrown = { version = "0.16.0", features = ["equivalent"] }
anyhow.workspace = true